[gd_scene load_steps=26 format=2]

[ext_resource path="res://scripts/Player_Server_Manager.gd" type="Script" id=1]
[ext_resource path="res://scripts/PlayersSync.gd" type="Script" id=2]
[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/SyncNpcs.gd" type="Script" id=4]
[ext_resource path="res://enemy/EvilCube.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/InstancesSync.gd" type="Script" id=6]
[ext_resource path="res://scripts/Chat.gd" type="Script" id=7]
[ext_resource path="res://commands.gd" type="Script" id=8]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=9]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.02, 0.02, 50 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 50, 50 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 25, 1, 25 )

[sub_resource type="BoxShape" id=5]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1, 1.59697, 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.314189, 1.17105, 1 )

[sub_resource type="CubeMesh" id=8]

[sub_resource type="Environment" id=9]
ambient_light_color = Color( 0.564706, 0.682353, 0.717647, 1 )
ssao_intensity = 2.0
ssao_color = Color( 0.192157, 0.32549, 0.32549, 1 )
ssao_quality = 2
dof_blur_far_quality = 2
dof_blur_near_quality = 2

[sub_resource type="Animation" id=10]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 4.4, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4.522, 0 ), Vector2( 4.522, -50 ), Vector2( 4.522, -50 ), Vector2( 4.522, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 4.4, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0.960784, 0, 1 ), Color( 1, 0.960784, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.619753 )
colors = PoolColorArray( 0, 0, 0, 0.176471 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )
width = 1000

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Trying to Reconnect to the Server |", "Trying to Reconnect to the Server /", "Trying to Reconnect to the Server -", "Trying to Reconnect to the Server \\" ]
}

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.172549 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0.935252 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[node name="Test1" type="Spatial"]

[node name="Player_Server_Manager" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Player_Server_Manager"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Player_Server_Manager"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="PlayersSync" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Player_main" parent="PlayersSync" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.962, -1.397 )

[node name="SyncNpcs" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Evil Cube" parent="SyncNpcs" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.3471, 1, 1.01309 )

[node name="Evil Cube2" parent="SyncNpcs" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.3471, 1, 9.45567 )

[node name="Evil Cube3" parent="SyncNpcs" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.3471, 1, -5.7108 )

[node name="instancesSync" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="Static" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Static"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0234647, 4.76837e-07, -0.0165033 )
mesh = SubResource( 3 )
material/0 = null

[node name="Area" type="StaticBody" parent="Static"]

[node name="CollisionShape" type="CollisionShape" parent="Static/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.923694, 0 )
shape = SubResource( 4 )

[node name="CollisionShape2" type="CollisionShape" parent="Static/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.88154, 0.0634952, 1.33783 )
shape = SubResource( 5 )

[node name="CollisionShape3" type="CollisionShape" parent="Static/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.72983, 1.18369, 2.71464 )
shape = SubResource( 6 )

[node name="CollisionShape4" type="CollisionShape" parent="Static/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.97756, 1.11874, -5.90593 )
shape = SubResource( 7 )

[node name="MeshInstance2" type="MeshInstance" parent="Static"]
transform = Transform( 0.890045, 0, 0, 0, 2.04685, 0, 0, 0, 0.890045, 3.78075, 0.575683, 2.72558 )
mesh = SubResource( 8 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="Static"]
transform = Transform( 0.890045, 0, 0, 0, 2.04685, 0, 0, 0, 0.890045, -3.88515, -1.01347, 1.33161 )
mesh = SubResource( 8 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="Static"]
transform = Transform( 0.239268, 0, 0, 0, 2.04685, 0, 0, 0, 0.890045, 3.96981, 0.192897, -5.91059 )
mesh = SubResource( 8 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="Static"]
transform = Transform( 0.553326, 0.590473, -0.587513, 0, 0.705328, 0.708881, 0.832965, -0.392242, 0.390276, 0, 0, 0 )
light_energy = 0.56
shadow_enabled = true
shadow_bias = 0.0
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.5
directional_shadow_bias_split_scale = 0.4

[node name="WorldEnvironment" type="WorldEnvironment" parent="Static"]
environment = SubResource( 9 )

[node name="Chat" type="Container" parent="."]
margin_top = 419.0
margin_right = 165.0
margin_bottom = 598.0
script = ExtResource( 7 )

[node name="commands" type="Spatial" parent="Chat"]
script = ExtResource( 8 )

[node name="Warning" type="Label" parent="Chat"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.522
margin_right = -114.478
margin_bottom = -131.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 9 )
text = "test"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Chat/Warning"]
anims/dissapear = SubResource( 10 )

[node name="Send" type="TextEdit" parent="Chat"]
anchor_right = 0.48
margin_left = 10.0
margin_top = 150.0
margin_right = 230.8
margin_bottom = 205.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 9 )
breakpoint_gutter = true

[node name="RichTextLabel" type="RichTextLabel" parent="Chat"]
margin_left = 10.0
margin_top = 20.0
margin_right = 577.33
margin_bottom = 240.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 9 )
scroll_following = true

[node name="Sprite" type="Sprite" parent="Chat"]
position = Vector2( 10, 0 )
scale = Vector2( 0.290367, 150 )
z_index = -1
texture = SubResource( 12 )
centered = false

[node name="ping" type="Label" parent="Chat"]
margin_left = 9.56
margin_top = -26.07
margin_right = 102.56
margin_bottom = 21.93
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 9 )
text = "ping: 00"

[node name="diconect" type="Label" parent="Chat"]
margin_left = 9.56
margin_top = -26.07
margin_right = 102.56
margin_bottom = 21.93
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 9 )
text = "Trying to Reconnect to the Server |"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Chat/diconect"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 13 )

[node name="Timer" type="Timer" parent="Chat"]
wait_time = 0.5
autostart = true

[node name="Line2D" type="Line2D" parent="Chat"]
texture_mode = 677867113

[node name="show_users" type="RichTextLabel" parent="Chat"]
margin_left = 312.0
margin_top = -280.0
margin_right = 1112.0
margin_bottom = 370.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="Chat/show_users"]
visible = false
position = Vector2( 0, -50 )
scale = Vector2( 1, 700 )
z_index = -1
texture = SubResource( 12 )
centered = false

[node name="TotalPlayers" type="RichTextLabel" parent="Chat/show_users"]
margin_left = -2.32031
margin_top = 600.292
margin_right = 997.68
margin_bottom = 650.292
custom_fonts/normal_font = ExtResource( 9 )
text = "total players:"

[node name="MenuButton" type="ItemList" parent="Chat/show_users"]
margin_right = 800.0
margin_bottom = 597.0
custom_styles/bg = SubResource( 14 )
custom_fonts/font = ExtResource( 9 )
allow_reselect = true
max_columns = 2
same_column_width = true
fixed_column_width = 400

[node name="Add to Friend" type="Button" parent="Chat/show_users/MenuButton"]
visible = false
margin_left = 231.4
margin_top = 275.387
margin_right = 398.4
margin_bottom = 329.387
rect_clip_content = true
custom_fonts/font = ExtResource( 9 )
text = "Add to Friend"
flat = true

[node name="Sprite3" type="Sprite" parent="Chat/show_users/MenuButton/Add to Friend"]
position = Vector2( -308.176, -56.0591 )
scale = Vector2( 0.793709, 189.003 )
z_index = -1
texture = SubResource( 16 )
centered = false

[node name="Ban User" type="Button" parent="Chat/show_users/MenuButton"]
visible = false
margin_left = 231.4
margin_top = 325.179
margin_right = 398.4
margin_bottom = 379.179
rect_clip_content = true
custom_fonts/font = ExtResource( 9 )
text = "Ban User"
flat = true

[node name="Sprite3" type="Sprite" parent="Chat/show_users/MenuButton/Ban User"]
position = Vector2( -308.176, -56.0591 )
scale = Vector2( 0.793709, 189.003 )
z_index = -1
texture = SubResource( 16 )
centered = false
[connection signal="animation_finished" from="Chat/Warning/AnimationPlayer" to="Chat" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Chat/Timer" to="Chat" method="_on_Timer_timeout"]
[connection signal="item_activated" from="Chat/show_users/MenuButton" to="Chat" method="_on_MenuButton_item_activated"]
[connection signal="button_down" from="Chat/show_users/MenuButton/Add to Friend" to="Chat" method="_on_Add_to_Friend_button_down"]
[connection signal="button_down" from="Chat/show_users/MenuButton/Ban User" to="Chat" method="_on_Ban_User_button_down"]
